<resources>
    <string name="app_name">AndroidUiComponents</string>

    <string name="ui_components">UI Components</string>
    <string name="atoms">Atoms</string>
    <string name="molecules">Molecules</string>
    <string name="organism">Organism</string>
    <string name="templates">Templates</string>
    <string name="view">View</string>
    <string name="others">Others</string>


    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="lorem_ipsum1">What is Lorem Ipsum?</string>
</resources>